--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <section class="foto-header container">
-           <img class="img-header" src="/imagens/rebecca.png" alt="foto de Rebecca Welton com blusa amarela">
-            <img class="img-header" src="/imagens/ted.png" alt="foto de Ted Lasso olhando pra Rebecca">
+            <img class="img-header" src="./imagens/rebecca.png" alt="foto de Rebecca Welton com blusa amarela">
+            <img class="img-header" src="./imagens/ted.png" alt="foto de Ted Lasso olhando pra Rebecca">
         </section>
     </header>
 </body>
