--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 
 <body>
     <header>
-        <section class="foto-header container">
-            <img class="img-header" src="./imagens/rebecca.png" alt="foto de Rebecca Welton com blusa amarela">
-            <img class="img-header" src="./imagens/ted.png" alt="foto de Ted Lasso olhando pra Rebecca">
+        <!-- <div class="lds-heart">
+            <div></div>
+        </div> -->
+        <section class="foto-header">
+            <div class="img-header container">
+                <img class="img-header-rebecca looking" src="./imagens/rebecca.png"
+                    alt="foto de Rebecca Welton com blusa amarela">
+                <img class="img-header-ted looking" src="./imagens/ted.png" alt="foto de Ted Lasso olhando pra Rebecca">
+            </div>
         </section>
     </header>
 </body>
