--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>💜 Ted and Rebecca 💜</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
