--- a/index.html
+++ b/index.html
@@ -5,25 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>💜 Ted and Rebecca 💜</title>
+    <title>Countdown</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/countdown.css">
 </head>
 
 <body>
-    <header>
-        <!-- <div class="lds-heart">
-            <div></div>
-        </div> -->
-        <section class="foto-header">
-            <div class="img-header container">
-                <img class="img-header-rebecca looking" src="./imagens/rebecca.png"
-                    alt="foto de Rebecca Welton com blusa amarela">
-                <img class="img-header-ted looking" src="./imagens/ted.png" alt="foto de Ted Lasso olhando pra Rebecca">
-            </div>
-        </section>
-    </header>
+    <section>
+        <div>
+            <div> <img class="img-bg" src="./imagens/tedandrebecca.png" alt=""></div>
+            <div id="timer"></div>
+        </div>
+    </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
